# DZ_WEB_10

WEB_HW_10_a/: authors.json  pyproject.toml
WEB_HW_10_a/WEB_HW_10_A/quotes_site/: manage.py
WEB_HW_10_a/WEB_HW_10_A/quotes_site/quotes/: apps.py  forms.py  models.py  urls.py  views.py
WEB_HW_10_a/WEB_HW_10_A/quotes_site/quotes/migrations/: 0001_initial.py  0002_alter_quote_tags.py
WEB_HW_10_a/WEB_HW_10_A/quotes_site/quotes/static/quotes/: style.css
WEB_HW_10_a/WEB_HW_10_A/quotes_site/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tag.html
WEB_HW_10_a/WEB_HW_10_A/quotes_site/quotes_site/: asgi.py  settings.py  urls.py  wsgi.py
WEB_HW_10_a/WEB_HW_10_A/quotes_site/users/: forms.py  urls.py  views.py
WEB_HW_10_a/WEB_HW_10_A/quotes_site/users/templates/users/: logout.html
WEB_HW_10_a/WEB_HW_10_A/utils/: authors.json  config.ini  json2mongodb.py  mongo2postgres.py  quotes.json  scrapy_quotes.py
WEB_HW_10_a/WEB_HW_10_A/utils/db/: connection.py  models.py
